Bug 1041374 - Fix deadlock in MSE reading vs data adding - r=kinetik